--- a/src/pages/Clients/ClientData.scss
+++ b/src/pages/Clients/ClientData.scss
@@ -1,16 +1,13 @@
-.container {
-    padding-top: 2%;
-    padding-bottom: 2%;
-    margin-left: 18%;
+.container1 {
+    margin: 0%;
     width: 100%;
     display: flex;
     flex-direction: column;
     // justify-content: center;
     // align-items: center;
     margin-top: 0%;
-    box-shadow: 0px 4px 8px rgba(180, 196, 235, 0.25);
     border-radius: 20px;
-    border: 1px #d6e1fe solid;
+    // border: 1px #D6E1FE solid;
 
     .client {
         width: 100%;
@@ -41,7 +38,16 @@
     .details {
         display: flex;
         flex-direction: column;
-        width: 70%;
+        justify-content: space-between;
+        width: 60%;
+        margin-top: 0%;
+        padding-right: 1%;
+        padding-top: 2%;
+        padding-bottom: 3%;
+        padding-left: 0%;
+        // overflow-y:none ;
+
+        margin-left: 15%;
         // padding-left: 64px; padding-right: 64px; padding-top: 36px; padding-bottom: 36px;
         background: #f4f9ff;
         border-radius: 16px;
@@ -51,15 +57,166 @@
         .row {
             display: flex;
             flex-direction: row;
-            justify-content: space-around;
-            width: 100% h1 {
-                color: black;
-                font-size: 24px;
-                font-family: Raleway;
-                font-weight: 500;
-                text-transform: capitalize;
-                word-wrap: break-word;
+            justify-content: space-evenly;
+            width: 100%;
+            margin-top: 3%;
+            position: relative;
+            right: 4%;
+
+            .element {
+                // margin: 2%;
+                h1 {
+                    color: black;
+                    font-size: 150%;
+                    font-family: Raleway;
+                    font-weight: 500;
+                    text-transform: capitalize;
+                    word-wrap: break-word;
+                }
+
+                input {
+                    padding-left: 12%;
+                    padding-top: 1.5%;
+                    padding-bottom: 2%;
+                    color: #7e7e7e;
+                    font-family: Raleway;
+                    font-weight: 500;
+                    font-size: 0.9vw;
+                    margin-top: 4%;
+                    width: 16vw;
+                    height: 4vh;
+                    background: white;
+                    box-shadow: 0px 4px 8px rgba(211.44, 211.44, 211.44, 0.25);
+                    border-radius: 8px;
+                    border: none;
+                }
             }
         }
+    }
+
+    .buttons {
+        margin-top: 1.5%;
+        display: flex;
+        // justify-content: space-evenly;
+        // // align-items: center;
+        position: relative;
+        width: 100%;
+        left: 35%;
+
+        .btn1 {
+            width: 7%;
+            height: 50px;
+
+            //  padding-left: 24px; padding-right: 24px; padding-top: 16px; padding-bottom: 16px;
+
+            button {
+                width: 100%;
+                height: 100%;
+                color: white;
+                background: #6c9fff;
+                box-shadow: 0px 4px 8px rgba(108, 159, 255, 0.25);
+                border-radius: 8px;
+                font-weight: 600;
+                font-size: medium;
+
+                // justify-content: center; align-items: center; gap: 8px;
+                //  display: inline-flex;
+            }
+        }
+
+        .btn2 {
+            width: 10%;
+            height: 50px;
+            box-shadow: 0px 4px 8px rgba(108, 159, 255, 0.25);
+            border-radius: 8px;
+            border: 1px #355083 solid;
+            margin-left: 8%;
+            // justify-content: center; align-items: center; gap: 8px;
+            // display: inline-flex
+
+            button {
+                width: 100%;
+                height: 100%;
+                background-color: white;
+                color: #355083;
+                font-size: 17px;
+                font-family: Raleway;
+                font-weight: 600;
+                text-transform: capitalize;
+                word-wrap: break-word;
+                border-radius: 8px;
+                border: none;
+            }
+        }
+    }
+}
+
+@media (max-width: 900px) {
+    .container1 .buttons .btn1 {
+        width: 13%;
+        height: 2.6rem;
+        button {
+            font-size: 1.7vw;
+        }
+    }
+    .container1 .buttons .btn2 {
+        width: 16%;
+        height: 2.6rem;
+        button {
+            font-size: 1.7vw;
+        }
+    }
+    .container1 .buttons {
+        left: 26%;
+    }
+
+    .container1 .client .img {
+        width: 9%;
+    }
+
+    // .container1 .client .name {
+    //     margin-top: 1%;
+    //     font-size: 183%;
+    // }
+}
+
+@media (max-width: 1200px) {
+    .container1 .details {
+        margin-top: 2%;
+    }
+    .container1 .buttons .btn1 {
+        width: 13%;
+        height: 2.6rem;
+        button {
+            font-size: 1.5vw;
+        }
+    }
+    .container1 .buttons .btn2 {
+        width: 16%;
+        height: 2.6rem;
+        button {
+            font-size: 1.5vw;
+        }
+    }
+    .container1 .buttons {
+        left: 26%;
+        margin-top: 3.5%;
+    }
+
+    .container1 .client .img {
+        width: 6%;
+    }
+
+    .container1 .client .name {
+        margin-top: 2%;
+        font-size: 183%;
+    }
+
+    .container1 .details .row .element input {
+        width: 18vw;
+    }
+
+    .container1 .details .row .element h1 {
+        font-size: 120%;
     }
 }
