--- a/src/pages/SignUp/Signup.module.scss
+++ b/src/pages/SignUp/Signup.module.scss
@@ -6,6 +6,8 @@
 
     padding: 4.37rem 0;
 
+    position: relative;
+
     .container {
         width: 1100px;
         height: auto;
@@ -87,13 +89,23 @@
                             height: 50px;
                             margin-top: 5px;
 
-                            border-radius: 10px;
-                            background: #e3e6fe;
+                            background-color: transparent;
 
                             color: #817c7c;
                             font-family: "Roboto";
                             font-size: 22px;
                             font-weight: 400;
+
+                            border-radius: 10px;
+                            background: #e3e6fe;
+                        }
+
+                        .icon {
+                            height: 50px;
+                            display: flex;
+                            align-items: center;
+                            justify-content: center;
+                            width: 10%;
                         }
                     }
                 }
@@ -224,6 +236,112 @@
                         }
                     }
                 }
+
+                .footer {
+                    margin-top: 50px;
+                    width: 100%;
+                    display: flex;
+                    flex-direction: column;
+                    align-items: center;
+                    justify-content: center;
+
+                    button {
+                        width: fit-content;
+                        height: fit-content;
+
+                        background-color: #7282fb;
+                        border: none;
+                        border-radius: 10px;
+
+                        padding: 10px 20px;
+
+                        font-size: 20px;
+                        color: #ffffff;
+
+                        cursor: pointer;
+
+                        margin-bottom: 10px;
+                        &:hover {
+                            scale: 1.02;
+                        }
+                    }
+
+                    span {
+                        cursor: pointer;
+                        color: #000000;
+                        font-size: 20px;
+                    }
+                }
+            }
+        }
+    }
+
+    .errorPopup {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent background */
+        z-index: 1000; /* Adjust as needed based on your layout */
+
+        .errorPopupContent {
+            background-color: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            max-width: 400px;
+            text-align: center;
+
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+
+            .closeErrorPopup {
+                cursor: pointer;
+
+                width: fit-content;
+                height: fit-content;
+                background-color: #7282fb;
+                border-radius: 10px;
+
+                display: flex;
+                align-items: center;
+
+                span {
+                    padding: 10px 20px;
+                    color: #ffffff;
+                }
+            }
+
+            h2 {
+                font-family: "Roboto";
+
+                margin-bottom: 10px;
+            }
+
+            p {
+                font-family: "Roboto";
+                font-size: 20px;
+                font-weight: 400;
+
+                margin-bottom: 20px;
+            }
+
+            ul {
+                list-style: none;
+                padding: 0;
+
+                li {
+                    font-family: "Roboto";
+                    font-size: 20px;
+                    color: red;
+                    margin: 5px 0;
+                }
+                margin-bottom: 20px;
             }
         }
     }
