--- a/src/pages/SignUp/Signup.module.scss
+++ b/src/pages/SignUp/Signup.module.scss
@@ -59,7 +59,7 @@
                 // background-color: yellow;
                 // height: 50vh;
                 height: auto;
-                margin: 75px 0 75px 0;
+                margin: 75px 0 50px 0;
 
                 .column {
                     display: flex;
@@ -268,8 +268,12 @@
 
                     span {
                         cursor: pointer;
-                        color: #000000;
+
+                        color: #181818;
+                        text-align: center;
+                        font-family: "Roboto";
                         font-size: 20px;
+                        font-weight: 400;
                     }
                 }
             }
