--- a/src/pages/Chat/MainChats.module.scss
+++ b/src/pages/Chat/MainChats.module.scss
@@ -20,6 +20,8 @@
             display: flex;
             flex-direction: row;
 
+            flex-wrap: wrap;
+
             margin-top: 50px;
 
             .card {
